--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,pythonvanilla
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pythonvanilla
 
+# vscode
+/vscode*
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
