--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pythonvanilla
 
 # vscode
-/vscode*
+/.vscode
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
